--- a/new.html
+++ b/new.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>hey this is mokim</h1>
+    <h1 style="color: rgb(11, 214, 62);">hay buddy this is Smrutiranjan Singh.......</h1>
 </body>
 </html>
