--- a/new.html
+++ b/new.html
@@ -9,5 +9,6 @@
     <h1>hey this is mokim</h1>
     <h1 style="color: rgb(11, 214, 62);">hay buddy this is Smrutiranjan Singh.......</h1>
     <h1>Hey Smaraki here !! 💀 </h1>
+    <h1>If you know you know,If you dont't know you dont't know </h1>
 </body>
 </html>
